<resources>
    <string name="app_name">ALC4 Challenge 1</string>
    <string name="my_profile">My profile</string>
    <string name="about_alc">About ALC</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="my_profile_pic">My profile pic</string>
    <string name="adeyinka_alabi">Adeyinka Alabi</string>
    <string name="track_android">Track: Android</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="email_adeyinka_alabi_a_gmail_com">Email: adeyinka.alabi.a@gmail.com</string>
    <string name="phone_number_2348038518570">Phone Number: 2348038518570</string>
    <string name="slack_username_p_funky">Slack Username: @p-funky</string>
    <string name="title_activity_my_profile">MyProfile</string>
</resources>
